# Analise_Classificacao_Churn

./: README.md  pyproject.toml  requirements.in  requirements.txt
data/: dados_banco.csv  dados_banco.parquet
outputs/: resultado_treino_modelos.csv
scr/: 1 - EDA.ipynb  AED.ipynb  Models.ipynb  download_data.py
